--- a/TesteMock.API/TesteMock.API.csproj
+++ b/TesteMock.API/TesteMock.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -14,10 +15,6 @@
     <ProjectReference Include="..\TesteMock.Models\TesteMock.Models.csproj" />
     <ProjectReference Include="..\TesteMock.Repository\TesteMock.Repository.csproj" />
     <ProjectReference Include="..\TesteMock.Services\TesteMock.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
