--- a/TesteMock.Services/TesteMock.Services.csproj
+++ b/TesteMock.Services/TesteMock.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TesteMock.Models\TesteMock.Models.csproj" />
     <ProjectReference Include="..\TesteMock.Repository\TesteMock.Repository.csproj" />
   </ItemGroup>
